syntax = "proto3";

package ChatApp;
option go_package = "github.com/ppthinh/ChatApp";

// ---------------------------- auth-service
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  bool success = 2;
  string error_message = 3;
}

message RegisterRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string phone_number = 4;
}

message RegisterResponse {
  string user_id = 1;
  bool success = 2;
  string error_message = 3;
  string token = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
}

// ---------------------------- user-service
service UserService {
  rpc GetUserByEmail(GetUserByEmailRequest) returns (User) {}
  rpc GetUserByPhoneNumber(GetUserByPhoneNumberRequest) returns (User) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (User) {}
  rpc DeleteUser(DeleteUserRequest) returns (Empty) {}

  rpc GetUserForAuth(GetUserByEmailRequest) returns (UserForAuth) {}
}

message User {
  string name = 1;
  string email = 2;
  string phone_number = 3;
}

message UserForAuth {
  string id = 1;
  string email = 2;
  string password = 3;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByPhoneNumberRequest {
  string phone_number = 1;
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string phone_number = 4;
}

message CreateUserResponse {
  string user_id = 1;
  bool success = 2;
  string error_message = 3;
}

message UpdateUserRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string phone_number = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message Empty {}